--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@ manage.py
 db.sqlite3
 *__pycache__/
 *.sqlite3
+mysite/accounts/migrations/
 mysite/posts/migrations/
 mysite/blog/migrations/
 mysite/polls/migrations/
